--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-typical": "^0.1.3",
+    "rxjs": "^7.5.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
